# minimial_rust

./: .dockerignore  README.md  skaffold.yaml
charts/frontend/: values.yaml
charts/frontend/templates/: deployment.yaml
charts/migration/: Chart.yaml  values.yaml
charts/migration/templates/: job.yaml  serviceaccount.yaml
charts/server/: Chart.yaml  values.yaml
charts/server/templates/: deployment.yaml
charts/server/templates/tests/: integration.yaml
frontend/: Dockerfile  nginx.conf  package-lock.json
migration/: Cargo.toml  Dockerfile
migration/migrations/: V1__initial.sql
migration/src/: main.rs
server/: Cargo.toml  Dockerfile
server/integration-test/: Dockerfile  test.go
server/src/: dao.rs  error.rs  lib.rs  main.rs
server/src/handlers/: healthz.rs  mod.rs
server/src/handlers/v1/: add_message.rs  get_messages.rs  mod.rs
