[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.6"
deadpool-postgres =  { version= "0.10", features = ["rt_tokio_1"] }
serde = {version="1.0", features=["derive"]}
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4", features = ["trace"] }

[profile.release]
lto = true
codegen-units = 1
