[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.6"
clap = { version="4.2.2", features = ["derive", "env"] }
deadpool-postgres =  { version= "0.10", features = ["rt_tokio_1"] }
http = "0.2"
serde = {version="1.0", features=["derive"]}
serde_json = { version="1.0"}
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["trace"] }
utoipa = { version = "3.4", features = ["axum_extras"] }

[profile.release]
lto = true
codegen-units = 1