[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.6"
clap = { version="4.2", features = ["derive", "env"] }
deadpool-postgres =  { version= "0.10", features = ["rt_tokio_1"] }
serde = {version="1.0", features=["derive"]}
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "3.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1", features = ["axum"] }

[dev-dependencies]
serde_json = "1.0"
http = "0.2"
hyper = "0.14"
mime = "0.3"


[profile.release]
lto = true
codegen-units = 1